<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ItemActivity">

    <include layout="@layout/toolbar_general" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:weightSum="10">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.3"
            android:background="@drawable/border_layout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/txt_income_trans"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/border_text_view_income"
                    android:gravity="center"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/txt_expense_trans"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="30dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/txt_income_acti_item"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/text_income"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/txt_expense_acti_item"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/text_expense"
                    android:textSize="30dp" />
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1.7"
            android:gravity="bottom|center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_value_acti_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:singleLine="true"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="40dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_zero_acti_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:singleLine="true"
                android:text=",000"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_vnd_acti_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text=" VND"
                android:textSize="40dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:weightSum="4">


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/text_note"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_note_acti_item"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:hint="@string/text_hint_note" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            android:stretchColumns="*"
            android:weightSum="10">


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.6"
                android:gravity="center|left"
                android:text="@string/text_date"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_date_acti_item"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7.4"
                android:gravity="center|center_vertical"
                android:paddingLeft="10dp" />

            <ImageView
                android:id="@+id/image_date_acti_item"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="end"
                android:src="@mipmap/ic_date_picker" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_weight="3"
                android:gravity="center|left"
                android:text="@string/text_category"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/image_category_acti_item"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:src="@mipmap/ic_category" />

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="5"
                android:background="@drawable/border_spinner"
                android:gravity="center_vertical" />

            <ImageView
                android:id="@+id/image_chose_category_acti_item"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center|end"
                android:layout_weight="1"
                android:paddingRight="5dp"
                android:src="@mipmap/ic_category_picker" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="4"
            android:gravity="center_horizontal">

            <include layout="@layout/custom_keyboard" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>


